# credentialsd

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOALS.md  README.md  SECURITY.md  meson.build  meson.options
.github/workflows/: main.yml
contrib/: xyz.iinuwa.credentials.CredentialManager.xml  xyz.iinuwa.credentialsd.Credentials.xml
credentialsd/: Cargo.toml  meson.build
credentialsd-common/: Cargo.toml  meson.build
credentialsd-common/src/: client.rs  lib.rs  memfd.rs  meson.build  model.rs  server.rs
credentialsd-ui/: Cargo.toml  meson.build
credentialsd-ui/data/: meson.build  xyz.iinuwa.credentialsd.CredentialsUi.desktop.in.in  xyz.iinuwa.credentialsd.CredentialsUi.gschema.xml.in  xyz.iinuwa.credentialsd.CredentialsUi.metainfo.xml.in.in
credentialsd-ui/data/resources/: meson.build  resources.gresource.xml  style.css
credentialsd-ui/data/resources/icons/: copy-icons.py  meson.build
credentialsd-ui/data/resources/img/: meson.build
credentialsd-ui/data/resources/ui/: meson.build  window.blp  window.ui
credentialsd-ui/po/: LINGUAS  POTFILES.in  credentialsd-ui.pot  de_DE.po  en_US.po  ka_GE.po  meson.build
credentialsd-ui/src/: client.rs  dbus.rs  main.rs  meson.build
credentialsd-ui/src/gui/: mod.rs
credentialsd-ui/src/gui/view_model/: mod.rs
credentialsd-ui/src/gui/view_model/gtk/: application.rs  device.rs  mod.rs  window.rs
credentialsd/src/: cbor.rs  main.rs  meson.build  model.rs  webauthn.rs
credentialsd/src/credential_service/: hybrid.rs  mod.rs  nfc.rs  platform.rs  third_party.rs  usb.rs
credentialsd/src/dbus/: flow_control.rs  gateway.rs  mod.rs  model.rs  ui_control.rs
credentialsd/src/gateway/: dbus.rs  mod.rs  util.rs
credentialsd/src/platform_authenticator/: mod.rs
credentialsd/tests/: dbus.rs  meson.build
credentialsd/tests/config/: mod.rs.in
credentialsd/tests/services/: xyz.iinuwa.credentialsd.Credentials.service.in
creds-lib/: Cargo.toml  meson.build
creds-lib/src/: client.rs  meson.build  model.rs  server.rs
creds-ui/: Cargo.toml  meson.build
creds-ui/data/: meson.build  xyz.iinuwa.CredentialManagerUi.desktop.in.in
creds-ui/src/: client.rs  dbus.rs  main.rs  meson.build
creds-ui/src/gui/: mod.rs
creds-ui/src/gui/view_model/: mod.rs
creds-ui/src/gui/view_model/gtk/: application.rs  mod.rs  window.rs
credsd/: .gitignore  Cargo.toml  meson.build
credsd/src/: cbor.rs  dbus.rs  main.rs  webauthn.rs
credsd/src/credential_service/: hybrid.rs  mod.rs  server.rs  usb.rs
credsd/src/dbus/: broker.rs  flow_control.rs  gateway.rs  mod.rs  model.rs  ui_control.rs
credsd/src/serde/: mod.rs
credsd/tests/: dbus.rs  meson.build
credsd/tests/config/: mod.rs.in
credsd/tests/services/: xyz.iinuwa.credentials.Credentials.service.in
dbus/: meson.build  xyz.iinuwa.credentialsd.Credentials.service.in  xyz.iinuwa.credentialsd.FlowControl.service.in  xyz.iinuwa.credentialsd.UiControl.service.in
demo_client/: cbor.py  cbor_tests.py  gui.py  main.py  meson.build  resources.gresource.xml  style.css  util.py  webauthn.py  window.blp  xyz.iinuwa.credentials.CredentialManager.xml
doc/: api.md  meson.build  xyz.iinuwa.credentialsd.Credentials.xml  xyz.iinuwa.credentialsd.FlowControl.xml  xyz.iinuwa.credentialsd.UiControl.xml
portal/: credentialsd.portal  meson.build
systemd/: meson.build  xyz.iinuwa.credentialsd.Credentials.service.in  xyz.iinuwa.credentialsd.FlowControl.service.in  xyz.iinuwa.credentialsd.UiControl.service.in
webext/: README.md  meson.build
webext/add-on/: background.js  content-bridge.js  content-main.js  content.js  manifest.chromium.json  manifest.firefox.json  manifest.json  meson.build
webext/add-on-edge/: background.js  content-bridge.js  content-main.js
webext/app/: credential_manager_shim.json  credential_manager_shim.json.in  credential_manager_shim.py  credential_manager_shim_edge.json.in  meson.build
xyz-iinuwa-credential-manager-portal-gtk/: .gitignore  Cargo.toml  meson.build
xyz-iinuwa-credential-manager-portal-gtk/data/: meson.build
xyz-iinuwa-credential-manager-portal-gtk/data/resources/ui/: window.ui
xyz-iinuwa-credential-manager-portal-gtk/src/: application.rs  cbor.rs  cose.rs  credential_service.rs  dbus.rs  gui.rs  main.rs  meson.build  model.rs  tokio_runtime.rs  webauthn.rs  window.rs
xyz-iinuwa-credential-manager-portal-gtk/src/credential_service/: hybrid.rs  mod.rs  server.rs  store.rs  usb.rs
xyz-iinuwa-credential-manager-portal-gtk/src/dbus/: model.rs
xyz-iinuwa-credential-manager-portal-gtk/src/gui/: mod.rs
xyz-iinuwa-credential-manager-portal-gtk/src/gui/view_model/: mod.rs
xyz-iinuwa-credential-manager-portal-gtk/src/gui/view_model/gtk/: application.rs  credential.rs  device.rs  mod.rs  window.rs
xyz-iinuwa-credential-manager-portal-gtk/src/platform_authenticator/: mod.rs  store.rs
xyz-iinuwa-credential-manager-portal-gtk/src/serde/: mod.rs
xyz-iinuwa-credential-manager-portal-gtk/src/view_model/: mod.rs
xyz-iinuwa-credential-manager-portal-gtk/src/view_model/gtk/: mod.rs
xyz-iinuwa-credential-manager-portal-gtk/tests/: dbus.rs  meson.build
xyz-iinuwa-credential-manager-portal-gtk/tests/config/: mod.rs.in
xyz-iinuwa-credential-manager-portal-gtk/tests/services/: xyz.iinuwa.CredentialManagerUi.service.in
