[workspace]
resolver = "3"
members = ["credentialsd", "credentialsd-common", "credentialsd-ui"]

[profile.release]
lto = true

[workspace.dependencies]
futures-lite = "2.6.0"
# libwebauthn = "0.2"
libwebauthn = { git = "https://github.com/linux-credentials/libwebauthn.git", rev="9e4e5d7", features = ["libnfc","pcsc"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zvariant = "5.6.0"
zbus = { version = "5.9.0", default-features = false }
