[package]
name = "credentialsd-common"
version = "0.1.0"
edition = "2024"
authors = ["Isaiah Inuwa <isaiah.inuwa@gmail.com>", "Martin Sirringhaus <martin.sirringhaus@suse.com>", "Alfie Fresta <alfie.fresta@gmail.com>"]
license = "LGPL-3.0-only"

[dependencies]
futures-lite = "2.6.0"
# libwebauthn = "0.2"
libwebauthn = { git = "https://github.com/linux-credentials/libwebauthn.git", rev = "d97c80d25bdb974472c40de5e5031db5946ad532" }
serde = { version = "1", features = ["derive"] }
zvariant = "5.6.0"
