[package]
name = "credentialsd-common"
version = "0.1.0"
edition = "2024"
authors = ["Isaiah Inuwa <isaiah.inuwa@gmail.com>", "Martin Sirringhaus <martin.sirringhaus@suse.com>", "Alfie Fresta <alfie.fresta@gmail.com>"]
license = "LGPL-3.0-only"

[dependencies]
futures-lite.workspace = true
libwebauthn.workspace = true
serde = { workspace = true, features = ["derive"] }
zvariant.workspace = true
