[package]
name = "credentialsd-ui"
version = "0.1.0"
edition = "2024"
authors = ["Isaiah Inuwa <isaiah.inuwa@gmail.com>", "Martin Sirringhaus <martin.sirringhaus@suse.com>", "Alfie Fresta <alfie.fresta@gmail.com>"]
license = "LGPL-3.0-only"

[features]
default = ["wayland"]
wayland = ["ashpd/gtk4_wayland", "ashpd/wayland"]

[dependencies]
ashpd = { version = "0.12.0", features = ["async-std", "backend"], default-features = false }
async-std = { version = "1.13.1", features = ["unstable"] }
credentialsd-common = { path = "../credentialsd-common" }
futures-lite = "2.6.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_6"] }
qrcode = "0.14.1"
serde.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.19"
zbus = { workspace = true, default-features = false, features = ["async-io"]}
