[package]
name = "credentialsd"
version = "0.1.0"
authors = ["Isaiah Inuwa <isaiah.inuwa@gmail.com>", "Martin Sirringhaus <martin.sirringhaus@suse.com>", "Alfie Fresta <alfie.fresta@gmail.com>"]
edition = "2021"
license = "LGPL-3.0-only"

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
credentialsd-common = { path = "../credentialsd-common" }
futures-lite.workspace = true
libwebauthn = { git = "https://github.com/linux-credentials/libwebauthn.git", rev="b306a527e5b20bef3126a0ade020ae8269785b4e", features = ["libnfc","pcsc"] }
# TODO: split nfc and pcsc into separate features
# Also, 0.6.1 fails to build with non-vendored library.
# https://github.com/alexrsagen/rs-nfc1/issues/15
nfc1 = { version = "=0.6.0", default-features = false }
rand = "0.9.2"
ring = "0.17.14"
serde.workspace = true
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zbus = { workspace = true, default-features = false, features = ["tokio"] }

[dev-dependencies]
gio = "0.21.0"
zbus = { version = "5.9.0", default-features = false, features = ["blocking-api", "tokio"] }
