[package]
name = "credsd"
version = "0.1.0"
authors = ["Isaiah Inuwa <isaiah.inuwa@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
base64 = "0.22.1"
creds-lib = { path = "../creds-lib" }
openssl = "0.10.72"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# serde_cbor = "0.11.1"
tracing = "0.1.41"
tracing-subscriber = "0.3"
zbus = { version = "5.9.0", default-features = false, features = ["tokio"] }
libwebauthn = "~0.2.2"
async-trait = "0.1.88"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
futures-lite = "2.6.0"

# this is temporary until we move COSE -> Vec<u8> serialization methods into libwebauthn
cosey = "0.3.2"
rustls = { version = "0.23.27", default-features = false, features = ["std", "tls12", "ring", "log", "logging", "prefer-post-quantum"] }
async-stream = "0.3.6"

[dev-dependencies]
gio = "0.21.0"
