[package]
name = "xyz-iinuwa-credential-manager-portal-gtk"
version = "0.1.0"
authors = ["Isaiah Inuwa <isaiah.inuwa@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
async-std = { version = "1.13.1", features = ["unstable"] }
base64 = "0.22.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_6"] }
openssl = "0.10.72"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# serde_cbor = "0.11.1"
tracing = "0.1.41"
tracing-subscriber = "0.3"
zbus = "5.5.0"
# libwebauthn = { git = "https://github.com/linux-credentials/libwebauthn", rev = "7efdc9324039ea7776a3a71a79d087f791b1ed91" }
libwebauthn = { git = "https://github.com/msirringhaus/xdg-credentials-portal", rev = "465b143207e97140371321a4b5bae45d4d211c8f" }
async-trait = "0.1.88"
tokio = { version = "1", features = ["rt-multi-thread"] }

# this is temporary until we move COSE -> Vec<u8> serialization methods into libwebauthn
cosey = "0.3.2"
